Commit al master del blogpost en su version mas reciente

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   </head>
 
   <body>
-    <h1>Esta es mi primera practica de git</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eos dolor fuga fugit, itaque commodi aperiam sapiente hic velit quis, quidem praesentium enim tempora nemo explicabo, veritatis accusantium accusamus sit?
-        </p>
+    <div id="container">
+      <div id="post">
+        <h1>Este es el titulo atractivo e interesante del post</h1>
+        <p>Este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+      </div>
+    </div>
   </body>
 </html>
