--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
 
   <body>
     <div id="container">
-      <div id="cabecera">Hiperblog <span id="tagline">Tu blog maestro</span></div>
       <div id="post">
-        <h1>Este es el titulo atractivo e interesante del post</h1>
-        <p>Este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
-        <p>Los blogs son la mehor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en yotube. Excepto si eres un rockstar. Pero estadisticamente no lo eres.... por ahora.</p>
-        <p>Suscribete y dale like</p>
+        <h1>Practicando Ramas en GIT</h1>
+        <p>Este es una practica de ejemplo</p>
       </div>
     </div>
   </body>
