Modifique la cabecera para practicar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
   <body>
     <div id="container">
+      <div class="cabecera">
+        Esta es la cabecera
+      </div>
       <div id="post">
         <h1>Practicando Ramas en GIT</h1>
         <p>Este es una practica de ejemplo</p>
