agregue un nuevo parrafo y cambié el color de los parrafos

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div id="post">
         <h1>Practicando Ramas en GIT</h1>
         <p>Este es una practica de ejemplo</p>
+        <p>El siguiente paso es realizar algunos cambios para pronto realizar un merge</p>
       </div>
     </div>
   </body>
